// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange Results EXPIRED renders correctly 1`] = `
<Modal
  size="small"
>
  <Styled(ModalHeader) />
  <ModalBody
    loading={false}
  >
    <Styled(Styled(Text))>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="grey700"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Text))>
      <OrderNote
        status="EXPIRED"
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Styled(Text)))>
      <Text
        altFont={false}
        capitalize={false}
        color="grey700"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </Styled(Styled(Styled(Text)))>
    <Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Styled(Text))
          color="grey700"
        >
          <styled.div
            color="error"
            marginRight="4px"
          />
          <OrderStatus
            status="EXPIRED"
          />
        </Styled(Styled(Text))>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsTargetValue"
          >
            <styled.s>
              0.1337 ETH
            </styled.s>
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Link
      bold={false}
      capitalize={false}
      color="blue600"
      href="https://support.blockchain.com/hc/en-us/requests/new?ticket_form_id=360000180551"
      size="16px"
      target="_blank"
      uppercase={false}
      weight={500}
    >
      <Button
        bold={false}
        capitalize={false}
        disabled={false}
        fullwidth={true}
        height="56px"
        nature="primary"
        rounded={false}
        size="14px"
        small={false}
        uppercase={false}
        weight={400}
      >
        <FormattedMessage
          defaultMessage="Contact Support"
          id="modals.exchangedetails.support"
          values={Object {}}
        />
      </Button>
    </Link>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results FAILED renders correctly 1`] = `
<Modal
  size="small"
>
  <Styled(ModalHeader) />
  <ModalBody
    loading={false}
  >
    <Styled(Styled(Text))>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="grey700"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Text))>
      <OrderNote
        status="FAILED"
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Styled(Text)))>
      <Text
        altFont={false}
        capitalize={false}
        color="grey700"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </Styled(Styled(Styled(Text)))>
    <Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Styled(Text))
          color="grey700"
        >
          <styled.div
            color="error"
            marginRight="4px"
          />
          <OrderStatus
            status="FAILED"
          />
        </Styled(Styled(Text))>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsTargetValue"
          >
            <styled.s>
              0.1337 ETH
            </styled.s>
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
    </Styled(styled.div)>
    <Link
      bold={false}
      capitalize={false}
      color="blue600"
      href="https://support.blockchain.com/hc/en-us/requests/new?ticket_form_id=360000180551"
      size="16px"
      target="_blank"
      uppercase={false}
      weight={500}
    >
      <Button
        bold={false}
        capitalize={false}
        disabled={false}
        fullwidth={true}
        height="56px"
        nature="primary"
        rounded={false}
        size="14px"
        small={false}
        uppercase={false}
        weight={400}
      >
        <FormattedMessage
          defaultMessage="Contact Support"
          id="modals.exchangedetails.support"
          values={Object {}}
        />
      </Button>
    </Link>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results FINISHED renders correctly 1`] = `
<Modal
  size="small"
>
  <Styled(ModalHeader) />
  <ModalBody
    loading={false}
  >
    <Styled(Styled(Text))>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="grey700"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Styled(Text)))>
      <Text
        altFont={false}
        capitalize={false}
        color="grey700"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </Styled(Styled(Styled(Text)))>
    <Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Styled(Text))
          color="grey700"
        >
          <styled.div
            color="success"
            marginRight="4px"
          />
          <OrderStatus
            status="FINISHED"
          />
        </Styled(Styled(Text))>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Deposited"
            id="modals.exchangeresults.depositedcoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Received"
            id="modals.exchangeresults.coinreceived"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsTargetValue"
          >
            0.1337 ETH
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Total Value"
            id="modals.exchangeresults.value"
            values={Object {}}
          />
           
          <FormattedMessage
            defaultMessage="(when exchanged)"
            id="modals.exchangeresults.valuenotcie"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
           1000 USD
        </Styled(Text)>
      </Styled(Styled(styled.div))>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Exchange rate"
            id="modals.exchangeresults.rate"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
          1 BTC = 0.06 ETH
        </Styled(Text)>
      </Styled(Styled(styled.div))>
    </Styled(styled.div)>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results PENDING_DEPOSIT renders correctly 1`] = `
<Modal
  size="small"
>
  <Styled(ModalHeader) />
  <ModalBody
    loading={false}
  >
    <Styled(Styled(Text))>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="grey700"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Text))>
      <OrderNote
        status="PENDING_DEPOSIT"
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Styled(Text)))>
      <Text
        altFont={false}
        capitalize={false}
        color="grey700"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </Styled(Styled(Styled(Text)))>
    <Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Styled(Text))
          color="grey700"
        >
          <styled.div
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="PENDING_DEPOSIT"
          />
        </Styled(Styled(Text))>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsTargetValue"
          >
            0.1337 ETH
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Total Value"
            id="modals.exchangeresults.value"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
          ~ 1000 USD
        </Styled(Text)>
      </Styled(Styled(styled.div))>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Exchange rate"
            id="modals.exchangeresults.rate"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
          1 BTC = 0.06 ETH
        </Styled(Text)>
      </Styled(Styled(styled.div))>
    </Styled(styled.div)>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results PENDING_EXECUTION renders correctly 1`] = `
<Modal
  size="small"
>
  <Styled(ModalHeader) />
  <ModalBody
    loading={false}
  >
    <Styled(Styled(Text))>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="grey700"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Text))>
      <OrderNote
        status="PENDING_EXECUTION"
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Styled(Text)))>
      <Text
        altFont={false}
        capitalize={false}
        color="grey700"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </Styled(Styled(Styled(Text)))>
    <Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Styled(Text))
          color="grey700"
        >
          <styled.div
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="PENDING_EXECUTION"
          />
        </Styled(Styled(Text))>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsTargetValue"
          >
            0.1337 ETH
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Total Value"
            id="modals.exchangeresults.value"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
          ~ 1000 USD
        </Styled(Text)>
      </Styled(Styled(styled.div))>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Exchange rate"
            id="modals.exchangeresults.rate"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
          1 BTC = 0.06 ETH
        </Styled(Text)>
      </Styled(Styled(styled.div))>
    </Styled(styled.div)>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results PENDING_REFUND renders correctly 1`] = `
<Modal
  size="small"
>
  <Styled(ModalHeader) />
  <ModalBody
    loading={false}
  >
    <Styled(Styled(Text))>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="grey700"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Text))>
      <OrderNote
        status="PENDING_REFUND"
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Styled(Text)))>
      <Text
        altFont={false}
        capitalize={false}
        color="grey700"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </Styled(Styled(Styled(Text)))>
    <Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Styled(Text))
          color="grey700"
        >
          <styled.div
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="PENDING_REFUND"
          />
        </Styled(Styled(Text))>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Broadcast"
            id="modals.exchangeresults.broadcastcoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Total to be refunded"
            id="modals.exchangeresults.totaltoberefunded"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
          ~ 0.1336
        </Styled(Text)>
      </Styled(Styled(styled.div))>
    </Styled(styled.div)>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results PENDING_WITHDRAWAL renders correctly 1`] = `
<Modal
  size="small"
>
  <Styled(ModalHeader) />
  <ModalBody
    loading={false}
  >
    <Styled(Styled(Text))>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="grey700"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Text))>
      <OrderNote
        status="PENDING_WITHDRAWAL"
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Styled(Text)))>
      <Text
        altFont={false}
        capitalize={false}
        color="grey700"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </Styled(Styled(Styled(Text)))>
    <Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Styled(Text))
          color="grey700"
        >
          <styled.div
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="PENDING_WITHDRAWAL"
          />
        </Styled(Styled(Text))>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsTargetValue"
          >
            0.1337 ETH
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Total Value"
            id="modals.exchangeresults.value"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
          ~ 1000 USD
        </Styled(Text)>
      </Styled(Styled(styled.div))>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Exchange rate"
            id="modals.exchangeresults.rate"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
          1 BTC = 0.06 ETH
        </Styled(Text)>
      </Styled(Styled(styled.div))>
    </Styled(styled.div)>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results REFUNDED renders correctly 1`] = `
<Modal
  size="small"
>
  <Styled(ModalHeader) />
  <ModalBody
    loading={false}
  >
    <Styled(Styled(Text))>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="grey700"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Text))>
      <OrderNote
        status="REFUNDED"
      />
    </Styled(Styled(Text))>
    <Styled(Styled(Styled(Text)))>
      <Text
        altFont={false}
        capitalize={false}
        color="grey700"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </Styled(Styled(Styled(Text)))>
    <Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Styled(Text))
          color="grey700"
        >
          <styled.div
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="REFUNDED"
          />
        </Styled(Styled(Text))>
      </Styled(styled.div)>
      <Styled(styled.div)>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Broadcast"
            id="modals.exchangeresults.broadcastcoin"
            values={Object {}}
          />
        </Styled(Text)>
        <styled.div>
          <Styled(Styled(Text))
            color="grey700"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </Styled(Styled(Text))>
        </styled.div>
      </Styled(styled.div)>
      <Styled(Styled(styled.div))>
        <Styled(Text)>
          <FormattedMessage
            defaultMessage="Total refunded"
            id="modals.exchangeresults.totalrefunded"
            values={Object {}}
          />
        </Styled(Text)>
        <Styled(Text)
          weight={400}
        >
           0.1336
        </Styled(Text)>
      </Styled(Styled(styled.div))>
    </Styled(styled.div)>
  </ModalBody>
</Modal>
`;
